* Thu Nov 17 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
- Increase precision for numerical solution for geometric nonlinear problems.
- Add code to check for out-of-balance forces in the equilibrium() function.

* Thu Nov  5 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
- Small polishing edits to the format of the Output Data file.  

* Wed Nov  4 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
- Move ... #define FILENMAX 96 ... from main.c to common.h because a number of
c++ objects require FILENMAX too
- Added WITH_GLOBALS define check for compiling Frame3DD into a GUI
- These changes suggested by Andrew Kovalev during GUI development for Frame3DD

* Thu Oct 29 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
- Increase limit on the number of trapezoidally distributed load from
one per frame element to ten per frame element
- Fixed Frame3DD example files in the doc directory and renamed them to 
frame3dd-ex1.3dd and frame3dd-ex2.3dd
- Changed comment chararacter from % to # in examples for syntax highlighting
- user-manual refinement

* Tue Oct 27 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022

- There appear to be conflicting definitions for the %TEMP% environment
variable in Windows.   The environment variable %TEMP% is defined differently
to an executable program than it is to a user.   To an executable program
%TEMP% is C:\WINDOWS\Temp and to a user %TEMP% is
%HOMEPATH%\Local Settings\Temp (at least in XP, it's something else in Vista).  
Until Microsoft resolves this discrepancy, the user-manual will recommend
setting the FRAME3DD_OUTDIR environment variable to a value referenced to
%HOMEPATH%, such as %HOMEPATH%\Desktop\Frame3DD\temp, rather than a value
referenced to %TEMP%, such as %TEMP%\frame3dd_temp
- The .ZIP installation now includes the directory Frame3DD\temp for the
reason described above.  
- If a user specifies a path for Output Data files, the file name is extracted